--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+meta<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -12,13 +12,13 @@
       name="keywords"
       content="ropa infantil, remeras para niños, bermudas, Next Kids Store, indumentaria para chicos"
     />
-    <meta property="og:image" content="img/1-portada.jpeg" />
+    <meta property="og:image" content="Imagenes/1-portada.jpeg" />
     <meta property="og:title" content="Next Kids Store - Ropa Infantil" />
     <meta
       property="og:description"
       content="Comprá remeras, bermudas y más para niños. Envíos a todo el país."
     />
-    <link rel="icon" href="img/favicon.png" type="image/png" />
+    <link rel="icon" href="Imagenes/21-favicon.png" type="image/png" />
     <title>Next Kids Store - Indumentaria</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -59,17 +59,17 @@
     <section class="seccion-caja info-doble">
       <div class="contacto">
         <div class="contacto-item">
-          <img src="imagenes/20-logo-instagram.jpg" alt="Instagram" />
+          <img src="Imagenes/20-logo-instagram.jpg" alt="Instagram" />
           <a href="#">@KevAlon</a>
         </div>
 
         <div class="contacto-item">
-          <img src="imagenes/20-logo-instagram.jpg" alt="Instagram" />
+          <img src="Imagenes/20-logo-instagram.jpg" alt="Instagram" />
           <a href="#">@SolAlon</a>
         </div>
 
         <div class="contacto-item">
-          <img src="imagenes/20-logo-instagram.jpg" alt="Instagram" />
+          <img src="Imagenes/20-logo-instagram.jpg" alt="Instagram" />
           <a href="#">@kns.indu</a>
         </div>
 
@@ -207,7 +207,7 @@
       target="_blank"
       class="floating-whatsapp-img"
     >
-      <img src="imagenes/whatsapp.png" alt="WhatsApp" />
+      <img src="Imagenes/whatsapp.png" alt="WhatsApp" />
     </a>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
