--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       name="keywords"
       content="ropa infantil, remeras para niños, bermudas, Next Kids Store, indumentaria para chicos"
     />
-    <meta property="og:image" content="imagenes/1-portada.jpeg" />
+    <meta property="og:image" content="Imagenes/1-portada.jpeg" />
     <meta property="og:title" content="Next Kids Store - Ropa Infantil" />
     <meta
       property="og:description"
       content="Comprá remeras, bermudas y más para niños. Envíos a todo el país."
     />
-    <link rel="icon" href="imagenes/21-favicon.png" type="image/png" />
+    <link rel="icon" href="Imagenes/" type="image/png" />
     <title>Next Kids Store - Indumentaria</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -41,7 +41,7 @@
     <header class="hero">
       <div class="hero-overlay">
         <img
-          src="imagenes/1-portada.jpeg"
+          src="Imagenes/"
           alt="Portada Next Kids Store"
           class="hero-img"
         />
@@ -59,17 +59,17 @@
     <section class="seccion-caja info-doble">
       <div class="contacto">
         <div class="contacto-item">
-          <img src="imagenes/20-logo-instagram.jpg" alt="Instagram" />
+          <img src="Imagenes/" alt="Instagram" />
           <a href="#">@KevAlon</a>
         </div>
 
         <div class="contacto-item">
-          <img src="imagenes/20-logo-instagram.jpg" alt="Instagram" />
+          <img src="Imagenes/" alt="Instagram" />
           <a href="#">@SolAlon</a>
         </div>
 
         <div class="contacto-item">
-          <img src="imagenes/20-logo-instagram.jpg" alt="Instagram" />
+          <img src="Imagenes/" alt="Instagram" />
           <a href="#">@kns.indu</a>
         </div>
 
@@ -207,7 +207,7 @@
       target="_blank"
       class="floating-whatsapp-img"
     >
-      <img src="imagenes/whatsapp.png" alt="WhatsApp" />
+      <img src="Imagenes/" alt="WhatsApp" />
     </a>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
