--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <script src="script.js"></script>
     <a href="#" class="back-to-top">↑</a>
     <a
-      href="https://api.whatsapp.com/send?phone=5493425505721"
+      href="https://www.whatsapp.com/"
       target="_blank"
       class="floating-whatsapp-img"
     >
