Cambios en botones de WhatsApp

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
 
         <a
-          href="https://api.whatsapp.com/send/?phone=5493425505721&text&type=phone_number&app_absent=0"
+          href="https://www.whatsapp.com/"
           target="_blank"
           class="whatsapp"
         >
